2008-04-08 Jon Dugan <jdugan@x1024.net>

* print report headers only once
* use appropriate report header for UDP tests

2008-04-07 Jon Dugan <jdugan@x1024.net>

* Add man page to autoconf goo
* Bump the version in autoconf
* Add missing LICENSE file

2008-04-04 Jon Dugan <jdugan@x1024.net>

* Incorporate help string fixes from Claus Klein
* Incorporate patch to restore header line in stats output from Claus Klein
* Reworked help string code to remove redundancy
* Add initial man page

2008-03-19 Stephen Hemminger <shemminger@linux-foundation.org>

* Add new option to allow selecting the sender congestion control
algorithm. This is a Linux specific extension useful for testing
other congestion control algorithms.

2008-03-19 Stephen Hemminger <shemminger@linux-foundation.org>

* Use sched_yield rather than usleep(0) as it behaves better on Linux

2008-03-12 Jon Dugan <jdugan@x1024.net>

* Rework Client::RunTCP so to update the stats for every packet if -i is set.
If -i is not set then the stats are only updated at the end of the run. This
was fallout of Andrew's patch.

* Added -Wall to CXXFLAGS and CFLAGS.  This generated a lot of noise in the
autotools generated files.

* Added initial AUTHORS file.  This is incomplete, but it's a start.

2008-03-12 Andrew Gallatin <gallatin@gmail.com>

* Rework threading.  This is done by having a condition variable for the reporting
thread rather than using sched_yield and/or usleep.  

* Address performance issues on non Linux systems by avoiding system calls
which are expensive on platforms other than Linux.

* Fixes from FreeBSD ports: max_size_t is now 64 bits and not Iperf does not
exit on ENOBUFS.

2007-10-01 JSE <jestabro@ncsa.uiuc.edu>

* ChangeLog file added

2007-10-05 JSE <jestabro@ncsa.uiuc.edu>

* Thread.c (thread_stop): "pthread_cancel (oldTID )" should be
"pthread_cancel (thread->mTID)"